Changed the template

--- a/sensor/templates/sensor/district.html
+++ b/sensor/templates/sensor/district.html
@@ -28,10 +28,8 @@
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Дистанция(см)</th>
-                        <th>Адрес</th>
-                        <th>Дата</th>
-                        <th>Удалить</th>
+                        <th>Локация</th>
+                        <th>Заполнено?</th>
                     </tr>
                 </thead>
                 <tbody>
