--- a/main/templates/main/base/navbar.html
+++ b/main/templates/main/base/navbar.html
@@ -4,6 +4,12 @@
               <a class="nav-link" href="#link1">Главное </a>
               <a class="nav-link" href="#link2">Про нас</a>
               <a class="nav-link" href="#link3">Контакты</a>
+              {% if request.user.is_authenticated %}
+              <a class="nav-link" href="{% url "main:logout" %}">Выход</a>
+              {% else %}
+              <a class="nav-link" href="{% url "main:registration" %}">Регистрация</a>
+              <a class="nav-link" href="{% url "main:login" %}">Вход</a>
+              {% endif %}
         </div>
       </nav>
 </div>
