--- a/backend/main/templates/main/base/navbar.html
+++ b/backend/main/templates/main/base/navbar.html
@@ -2,7 +2,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="collapse navbar-collapse" id="navbarNav">
               <a class="nav-link" href="#link1">Главное </a>
-              <a class="nav-link" href="#link2">Про нас</a>
+              <a class="nav-link" href="#link2">О нас</a>
+              <a class="nav-link" href="{% url "sensors:districts_list" %}">Районы</a>
               <a class="nav-link" href="#link3">Контакты</a>
               {% if request.user.is_authenticated %}
               <a class="nav-link" href="{% url "main:logout" %}">Выход</a>
