--- a/backend/main/templates/main/email/email_success_template.html
+++ b/backend/main/templates/main/email/email_success_template.html
@@ -1,4 +1,4 @@
-{%  include "base.html" %}
+{%  extends "main/base/base.html" %}
 
 {% load static %}
 
@@ -56,7 +56,7 @@
     
             // If the timer value reaches 0, stop the timer
             if (timerValue === 0) {
-                window.location.href = '/shop/';
+                window.location.href = '';
             }
         }, 1000);
     });
